# mk3

./: .gitignore  PHASE3.md  README.md  STYLE_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
examples/: annotation_box.json
src/morrow/: __init__.py  candidates.py  cli.py  compile.py  conditions.py  execute.py  geometry.py  journal.py  motion.py  perceive.py  pipeline.py  ranker.py  robot.py  scene.py  sequence.py  serialize.py  skill.py  trace.py
src/morrow/bench/: ACCEPTANCE.md  BENCH.md  __init__.py  bench_perceive.py  bench_record.py  bench_robot.py
src/morrow/dashboard/: __init__.py  app.py  server.py
src/morrow/eval/: BENCHMARK.md  __init__.py  analysis.py  baseline.py  benchmark.py  metrics.py  ranker_eval.py
src/morrow/physics/: __init__.py  annotate.py  arm.py  arm_multi.py  film.py  mj_perceive.py  mj_robot.py  multipack.py  pattern.py  reconstruct.py  record.py  scene.py  showcase.py  watch.py  webview.py  world.py
src/morrow/sim/: __init__.py  record.py  scenarios.py  sim_perceive.py  sim_robot.py  world.py
tests/: test_arm_multi.py  test_bench.py  test_compile.py  test_eval.py  test_execute.py  test_geometry.py  test_journal.py  test_multipack.py  test_pattern.py  test_perturbations.py  test_physics.py  test_ranker.py  test_reconstruct.py  test_sequence.py  test_serialize.py  test_watch.py
